// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when closed opens on click 1`] = `
<div>
  <button
    aria-controls=":r0:"
    aria-expanded="false"
    class="flex justify-between items-center w-full bg-purple-dark p-2 border-b border-b-theme-bg-alt"
    type="button"
  >
    Oracle text
    <span
      class="transform-gpu transition-transform rotate-0"
    >
      <svg
        class="h-6 w-6"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 15.375 6 9.375 7.4 7.975 12 12.575 16.6 7.975 18 9.375Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <div
    class="hidden"
    id=":r0:"
  >
    <p
      class="mb-4"
    >
      If a creature dying causes a triggered ability of a permanent you control to trigger, that ability triggers an additional time.
    </p>
    <p
      class="mb-4"
    >
      Creature tokens you control have vigilance and lifelink.
    </p>
    <p>
      <i>
        While Kaya is guildmaster, Teysa waits patiently at the center of the Orzhov web of power.
      </i>
    </p>
  </div>
</div>
`;

exports[`when open closes on click 1`] = `
<div>
  <button
    aria-controls=":r1:"
    aria-expanded="true"
    class="flex justify-between items-center w-full bg-purple-dark p-2 border-b border-b-theme-bg-alt"
    type="button"
  >
    Oracle text
    <span
      class="transform-gpu transition-transform rotate-180"
    >
      <svg
        class="h-6 w-6"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 15.375 6 9.375 7.4 7.975 12 12.575 16.6 7.975 18 9.375Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <div
    class="p-2 pt-4"
    id=":r1:"
  >
    <p
      class="mb-4"
    >
      If a creature dying causes a triggered ability of a permanent you control to trigger, that ability triggers an additional time.
    </p>
    <p
      class="mb-4"
    >
      Creature tokens you control have vigilance and lifelink.
    </p>
    <p>
      <i>
        While Kaya is guildmaster, Teysa waits patiently at the center of the Orzhov web of power.
      </i>
    </p>
  </div>
</div>
`;
